tests/builder/newtype.rs
use boring_derive::Builder;

#[derive(Builder)]
struct Example(usize);

fn main() {}
